--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,10 @@ dependencies:
   flutter_speed_dial: ^3.0.5      
   #spotify: ^0.5.1
   webview_flutter: ^2.0.7
-  audio_manager: ^0.7.3
-  flutter_audio_query: ^0.3.5+6
+  #audio_manager: ^0.7.3
+  #flutter_audio_query: ^0.3.5+6
   spotify_sdk: ^2.1.0
+  firebase_auth: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
